Setting up a secure JWT authentication system

--- a/api/package.json
+++ b/api/package.json
@@ -2,19 +2,22 @@
   "name": "api",
   "version": "1.0.0",
   "description": "Backend API",
-  "main": "server.js",
+  "main": "index.js",
   "author": "",
   "license": "ISC",
   "scripts": {
-    "start": "node server.bundle.js",
+    "start": "node index.bundle.js",
     "build": "webpack",
-    "dev": "nodemon ./server.js"
+    "dev": "nodemon ./index.js"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
+    "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^2.0.1",
-    "md5": "^2.3.0",
+    "nnode": "^0.3.3",
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
