--- a/api/package.json
+++ b/api/package.json
@@ -16,6 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
+    "express-rate-limit": "^5.5.0",
     "http-proxy-middleware": "^2.0.1",
     "nnode": "^0.3.3",
     "sqlite3": "^5.0.2"
