--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "autoprefixer": "^10.4.0",
     "next": "11.1.2",
+    "postcss": "^8.3.11",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "tailwindcss": "^2.2.19"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
