--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.0",
+    "cookies": "^0.8.0",
     "next": "11.1.2",
     "postcss": "^8.3.11",
     "react": "17.0.2",
