--- a/client/package.json
+++ b/client/package.json
@@ -3,10 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "start:dev": "cross-env NODE_ENV=development node server.js",
-    "build": "next build && next export",
-    "start": "next start"
+    "dev": "next dev -p 3000",
+    "build": "next build",
+    "start": "next start -p 3000"
   },
   "dependencies": {
     "autoprefixer": "^10.4.0",
@@ -21,7 +20,6 @@
     "cross-env": "^7.0.3",
     "eslint": "8.0.0",
     "eslint-config-next": "11.1.2",
-    "express": "^4.17.1",
-    "http-proxy-middleware": "^2.0.1"
+    "express": "^4.17.1"
   }
 }
