--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "autoprefixer": "^10.4.0",
     "cookies": "^0.8.0",
     "next": "11.1.2",
+    "next-cookies": "^2.0.3",
     "postcss": "^8.3.11",
     "react": "17.0.2",
     "react-dom": "17.0.2",
