--- a/client/package.json
+++ b/client/package.json
@@ -8,8 +8,11 @@
     "start": "next start -p 3000"
   },
   "dependencies": {
+    "@heroicons/react": "^1.0.5",
+    "@tailwindcss/typography": "^0.4.1",
     "autoprefixer": "^10.4.0",
     "cookies": "^0.8.0",
+    "daisyui": "^1.16.2",
     "next": "11.1.2",
     "next-cookies": "^2.0.3",
     "postcss": "^8.3.11",
