--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "express-rate-limit": "^5.5.0",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
     "nnode": "^0.3.3",
     "sqlite3": "^5.0.2"
   },
