--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "start": "node index.bundle.js",
+    "start": "node ./index.bundle.js",
     "build": "webpack",
     "dev": "nodemon ./index.js"
   },
@@ -23,6 +23,10 @@
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.12",
+    "@babel/polyfill": "^7.12.1",
+    "@babel/preset-env": "^7.16.11",
+    "babel-loader": "^8.2.3",
     "nodemon": "^2.0.13",
     "webpack": "^5.58.2",
     "webpack-cli": "^4.9.0"
