--- a/api/package.json
+++ b/api/package.json
@@ -10,7 +10,7 @@
     "build": "webpack",
     "dev": "nodemon ./index.js"
   },
-  "heroku-run-build-script": true,
+  "heroku-run-build-script": false,
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.5",
