--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
     "nnode": "^0.3.3",
+    "nodemailer": "^6.7.2",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "sqlite3": "^5.0.2"
   },
   "devDependencies": {
