--- a/api/package.json
+++ b/api/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
+    "cloudinary": "^1.28.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
@@ -18,6 +19,7 @@
     "express-rate-limit": "^5.5.0",
     "jsonwebtoken": "^8.5.1",
     "multer": "^1.4.4",
+    "multer-storage-cloudinary": "^4.0.0",
     "nnode": "^0.3.3",
     "nodemailer": "^6.7.2",
     "nodemailer-sendgrid-transport": "^0.2.0",
